feat: add google site verification

--- a/themes/blowfish/layouts/partials/head.html
+++ b/themes/blowfish/layouts/partials/head.html
@@ -160,6 +160,7 @@
 
     gtag('config', 'G-6R7457QHQ1');
   </script>
+  <meta name="google-site-verification" content="mjLR7AGk72jx5utzzbyOOyeC5lwK6ShoYmP2M6Ji8DE" />
   {{ end }}
   {{ end }}
   <!-- {{ partial "hook_head_end.html" . }} -->
